--- a/app/src/main/res/layout/activity_classrooms.xml
+++ b/app/src/main/res/layout/activity_classrooms.xml
@@ -43,7 +43,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_marginTop="70dp"
-            android:background="@color/semitransparent"
+            android:background="@color/Accent"
             android:orientation="vertical">
 
             <ImageButton
