--- a/app/src/main/res/layout/activity_classroom_groups.xml
+++ b/app/src/main/res/layout/activity_classroom_groups.xml
@@ -66,77 +66,82 @@
             android:id="@+id/closeGroupPanel"
             style="@style/backButtonDark" />
 
-        <RelativeLayout
-            android:id="@+id/imageLayout"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="20dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="70dp">
 
-            <ImageView
-                android:id="@+id/GroupImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/baseline_account_circle_dark_24" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/editGroupImage"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/oval_50_primary"
-                android:src="@drawable/baseline_edit_24" />
+                <RelativeLayout
+                    android:id="@+id/imageLayout"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp">
 
-        </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/GroupImage"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/baseline_account_circle_dark_24" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/groupNameTextInputLayout"
-            style="@style/inputField"
-            android:layout_below="@+id/imageLayout"
-            android:layout_marginHorizontal="25dp">
+                    <ImageButton
+                        android:id="@+id/editGroupImage"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/oval_50_primary"
+                        android:src="@drawable/baseline_edit_24" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/groupName"
-                style="@style/inputFieldEditTextColor"
-                android:hint="@string/groupName"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+                </RelativeLayout>
 
-        <TextView
-            android:id="@+id/textInGroup"
-            style="@style/chipTextView"
-            android:layout_below="@+id/groupNameTextInputLayout"
-            android:text="V skupine" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/groupNameTextInputLayout"
+                    style="@style/inputField"
+                    android:layout_marginHorizontal="25dp">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupIn"
-            style="@style/chipGroup"
-            android:layout_below="@+id/textInGroup"
-            app:singleLine="false"
-            app:singleSelection="true" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/groupName"
+                        style="@style/inputFieldEditTextColor"
+                        android:hint="@string/groupName"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textNotInGroup"
-            style="@style/chipTextView"
-            android:layout_below="@+id/chipGroupIn"
-            android:text="Mimo skupiny" />
+                <TextView
+                    android:id="@+id/textInGroup"
+                    style="@style/chipTextView"
+                    android:text="V skupine" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupNotIn"
-            style="@style/chipGroup"
-            android:layout_below="@+id/textNotInGroup"
-            app:singleLine="false"
-            app:singleSelection="true" />
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroupIn"
+                    style="@style/chipGroup"
+                    app:singleLine="false"
+                    app:singleSelection="true" />
 
-        <Button
-            android:id="@+id/saveButton"
-            style="@style/actionButton"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="25dp"
-            android:text="@string/create" />
+                <TextView
+                    android:id="@+id/textNotInGroup"
+                    style="@style/chipTextView"
+                    android:text="Mimo skupiny" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroupNotIn"
+                    style="@style/chipGroup"
+                    app:singleLine="false"
+                    app:singleSelection="true" />
+
+                <Button
+                    android:id="@+id/saveButton"
+                    style="@style/actionButton"
+                    android:layout_margin="25dp"
+                    android:text="@string/create" />
+            </LinearLayout>
+        </ScrollView>
 
     </RelativeLayout>
 
