--- a/app/src/main/res/layout/activity_classroom_tasks.xml
+++ b/app/src/main/res/layout/activity_classroom_tasks.xml
@@ -66,109 +66,113 @@
             android:id="@+id/closeTaskPanel"
             style="@style/backButtonDark" />
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="70dp"
-            android:orientation="vertical">
+            android:layout_marginTop="70dp">
 
-            <RelativeLayout
-                android:id="@+id/imageLayout"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/taskImage"
+                <RelativeLayout
+                    android:id="@+id/imageLayout"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/baseline_account_circle_dark_24" />
+                    android:layout_marginBottom="20dp">
 
-                <ImageButton
-                    android:id="@+id/editTaskImage"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:background="@drawable/oval_50_primary"
-                    android:src="@drawable/baseline_edit_24" />
-            </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/taskImage"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/baseline_account_circle_dark_24" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/taskNameTextInputLayout"
-                style="@style/inputField"
-                android:layout_marginHorizontal="20dp">
+                    <ImageButton
+                        android:id="@+id/editTaskImage"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/oval_50_primary"
+                        android:src="@drawable/baseline_edit_24" />
+                </RelativeLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/taskName"
-                    style="@style/inputFieldEditTextColor"
-                    android:hint="@string/taskName"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/taskNameTextInputLayout"
+                    style="@style/inputField"
+                    android:layout_marginHorizontal="20dp">
 
-            <TextView
-                style="@style/chipTextView"
-                android:text="Typ" />
-
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipTaskType"
-                style="@style/chipGroup"
-                app:singleLine="false"
-                app:singleSelection="true" />
-
-            <TextView
-                android:id="@+id/chipTaskTypeError"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="50dp"
-                android:layout_marginVertical="0dp"
-                android:textColor="@color/Error"
-                android:textSize="12sp"
-                android:visibility="gone" />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/taskName"
+                        style="@style/inputFieldEditTextColor"
+                        android:hint="@string/taskName"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    style="@style/textViewRight"
-                    android:text="Viditeľná od" />
+                    style="@style/chipTextView"
+                    android:text="Typ" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipTaskType"
+                    style="@style/chipGroup"
+                    app:singleLine="false"
+                    app:singleSelection="true" />
 
                 <TextView
-                    android:id="@+id/dateTimeTaskVisibleFrom"
-                    style="@style/textViewLeft"
-                    android:text="@string/set" />
-            </RelativeLayout>
+                    android:id="@+id/chipTaskTypeError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginVertical="0dp"
+                    android:textColor="@color/Error"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp">
+
+                    <TextView
+                        style="@style/textViewRight"
+                        android:text="Viditeľná od" />
+
+                    <TextView
+                        android:id="@+id/dateTimeTaskVisibleFrom"
+                        style="@style/textViewLeft"
+                        android:text="@string/set" />
+                </RelativeLayout>
 
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp">
 
-                <TextView
-                    style="@style/textViewRight"
-                    android:text="Deadline" />
+                    <TextView
+                        style="@style/textViewRight"
+                        android:text="Deadline" />
 
-                <TextView
-                    android:id="@+id/dateTimeTaskDeadline"
-                    style="@style/textViewLeft"
-                    android:text="@string/set" />
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/dateTimeTaskDeadline"
+                        style="@style/textViewLeft"
+                        android:text="@string/set" />
+                </RelativeLayout>
 
-            <Button
-                android:id="@+id/saveButton"
-                style="@style/actionButton"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="25dp"
-                android:text="@string/create" />
-        </LinearLayout>
+                <Button
+                    android:id="@+id/saveButton"
+                    style="@style/actionButton"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="25dp"
+                    android:text="@string/create" />
+            </LinearLayout>
+        </ScrollView>
 
     </RelativeLayout>
 
