--- a/app/src/main/res/layout/activity_student_tasks.xml
+++ b/app/src/main/res/layout/activity_student_tasks.xml
@@ -59,38 +59,45 @@
             android:id="@+id/closeTasksPanel"
             style="@style/backButtonDark" />
 
-        <TextView
-            android:id="@+id/textIn"
-            style="@style/chipTextView"
-            android:layout_marginTop="70dp"
-            android:text="Priradené úlohy" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="70dp">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupIn"
-            style="@style/chipGroup"
-            android:layout_below="@+id/textIn"
-            app:singleLine="false"
-            app:singleSelection="true" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textNotIn"
-            style="@style/chipTextView"
-            android:layout_below="@+id/chipGroupIn"
-            android:text="Dostupné úloy" />
+                <TextView
+                    android:id="@+id/textIn"
+                    style="@style/chipTextView"
+                    android:text="Priradené úlohy" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chipGroupNotIn"
-            style="@style/chipGroup"
-            android:layout_below="@+id/textNotIn"
-            app:singleLine="false"
-            app:singleSelection="true" />
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroupIn"
+                    style="@style/chipGroup"
+                    app:singleLine="false"
+                    app:singleSelection="true" />
 
-        <Button
-            android:id="@+id/saveButton"
-            style="@style/actionButton"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="25dp"
-            android:text="@string/save" />
+                <TextView
+                    android:id="@+id/textNotIn"
+                    style="@style/chipTextView"
+                    android:text="Dostupné úloy" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroupNotIn"
+                    style="@style/chipGroup"
+                    app:singleLine="false"
+                    app:singleSelection="true" />
+
+                <Button
+                    android:id="@+id/saveButton"
+                    style="@style/actionButton"
+                    android:layout_margin="25dp"
+                    android:text="@string/save" />
+            </LinearLayout>
+        </ScrollView>
 
     </RelativeLayout>
 
