--- a/app/src/main/res/layout/grid_image_list_item.xml
+++ b/app/src/main/res/layout/grid_image_list_item.xml
@@ -13,13 +13,16 @@
         <RelativeLayout
             android:id="@+id/innerLayout"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:background="@drawable/oval_20_surface">
 
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_centerInParent="true"/>
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
